@@ -23,12 +23,13 @@ sub from_file {
 	my @d = File::Spec->splitdir($d);
 	pop @d if $d[-1] eq '';
 	my $dirs = List::Util::first {
-		       -f File::Spec->catpath( $v, $_, 'Makefile.PL' )
-			or -f File::Spec->catpath( $v, $_, 'Build.PL' )
-			or -f File::Spec->catpath( $v, $_, 'dist.ini' )
-			or -f File::Spec->catpath( $v, $_, 'padre.yml' );
-	}
-	map { File::Spec->catdir( @d[ 0 .. $_ ] ) } reverse( 0 .. $#d );
+		-f File::Spec->catpath( $v, $_, 'Makefile.PL' )
+		or -f File::Spec->catpath( $v, $_, 'Build.PL' )
+		or -f File::Spec->catpath( $v, $_, 'dist.ini' )
+		or -f File::Spec->catpath( $v, $_, 'padre.yml' );
+	} map {
+		File::Spec->catdir( @d[ 0 .. $_ ] )
+	} reverse( 0 .. $#d );
 	unless ( defined $dirs ) {
 		return;
 	}
@@ -37,6 +38,30 @@ sub from_file {
 	return $class->new(
 		root => File::Spec->catpath( $v, $dirs ),
 	);
+}
+
+
+
+
+
+######################################################################
+# Directory Integration
+
+sub ignore_rule {
+	return sub {
+		# Default filter as per normal
+		if ( $_->{name} =~ /^\./ ) {
+			return 0;
+		}
+
+		# In a distribution, we can ignore more things
+		if ( $_->{name} =~ /^(?:blib|_build|inc|Makefile|pm_to_blib)\z/ ) {
+			return 0;
+		}
+
+		# Everything left, we show
+		return 1;
+	};
 }
 
 1;
