@@ -3,6 +3,10 @@ Changes for Perl Application Development and Refactoring Environment
 0.42 to be released
     - Fixed a bug that crashed Padre while moving panels with outline
       enabled (GARU)
+    - The Directory browser hidden files support now automatically recognises
+      intermediate directories (blib etc) in Perl distributions, and correctly
+      ignores them (ADAMK)
+    - Various performance improvements to directory tree (ADAMK)
 
 0.41 2009.07.23
     - Remove Experimental mode.
